@@ -62,11 +62,15 @@ public class EnrollStudentsAction extends Action {
         List<Student> studentsToEnroll = new ArrayList<>();
         studentEnrollRequests.forEach(studentEnrollRequest -> {
             String normalizedEmail = normalizeEmail(studentEnrollRequest.getEmail());
-            Section section = new Section(course, studentEnrollRequest.getSection());
-            Team team = new Team(section, studentEnrollRequest.getTeam());
-            studentsToEnroll.add(new Student(
+            Section section = new Section(studentEnrollRequest.getSection());
+            course.addSection(section);
+            Team team = new Team(studentEnrollRequest.getTeam());
+            section.addTeam(team);
+            Student student = new Student(
                     course, studentEnrollRequest.getName(),
-                    normalizedEmail, studentEnrollRequest.getComments(), team));
+                    normalizedEmail, studentEnrollRequest.getComments());
+            team.addUser(student);
+            studentsToEnroll.add(student);
         });
         try {
             logic.validateSectionsAndTeams(studentsToEnroll, courseId);
@@ -107,8 +111,9 @@ public class EnrollStudentsAction extends Action {
                     Student existingStudent = logic.getStudentForEmail(courseId, normalizedEmail);
                     Student newStudent = new Student(
                             course, enrollRequest.getName(),
-                            normalizedEmail, enrollRequest.getComments(), team);
+                            normalizedEmail, enrollRequest.getComments());
                     newStudent.setId(existingStudent.getId());
+                    team.addUser(newStudent);
                     Student updatedStudent = logic.updateStudentCascade(newStudent);
                     enrolledStudents.add(updatedStudent);
                 } catch (InvalidParametersException | EntityDoesNotExistException
@@ -124,7 +129,8 @@ public class EnrollStudentsAction extends Action {
                     Team team = logic.getTeamOrCreate(section, enrollRequest.getTeam());
                     Student newStudent = new Student(
                             course, enrollRequest.getName(),
-                            normalizedEmail, enrollRequest.getComments(), team);
+                            normalizedEmail, enrollRequest.getComments());
+                    team.addUser(newStudent);
                     newStudent = logic.createStudent(newStudent);
                     enrolledStudents.add(newStudent);
                 } catch (InvalidParametersException | EntityAlreadyExistsException exception) {
@@ -138,7 +144,7 @@ public class EnrollStudentsAction extends Action {
         List<StudentData> studentDataList = enrolledStudents
                 .stream()
                 .map(StudentData::new)
-                .collect(Collectors.toList());
+                .toList();
         StudentsData data = new StudentsData();
 
         data.setStudents(studentDataList);
